--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,3 +1,3 @@
 # Put application-specific config here (application name: client-config-app)
 some.property=app specific overridden value
-some.server.port=7070
+server.port=7070
