--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,3 +1,4 @@
 # Put application-specific config here (application name: client-config-app)
-some.property=app specific overridden value
+some.property=coffee
+some.other.property=is good
 server.port=7070
