--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,5 +1,7 @@
 # Put application-specific config here (application name: client-config-app)
 some.property=coffee
-some.other.property=is better
+some.other.property=is really good
 server.port=8080
+#default is on which makes the
+#localhost:8080/refresh command not autorized when surfing to it
 management.security.enabled=false
