--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,5 @@
 # Put all global configuration here
 some.property=global
 some.other.property=global
+
+test=this is a test from application.properties
