--- a/application.properties
+++ b/application.properties
@@ -2,4 +2,4 @@
 some.property=global
 some.other.property=global
 
-test=this is a test from application.properties
+test=created this test variable and im using @Value to do it and inject this message into a variable in the code..I updated this now by using the @RefreshScope on my controller and surfed to localhost:8080/refresh and updated this while running the application and I didnt reboot it
