--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -2,6 +2,8 @@
 some.property=coffee
 some.other.property=is really good
 server.port=8080
+
+tm.test=overiding this if it was set in application.properties.. really like the @Value-annotation
 #default is on which makes the
 #localhost:8080/refresh command not autorized when surfing to it
 management.security.enabled=false
