--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -3,6 +3,6 @@ some.property=coffee
 some.other.property=is really good
 server.port=8080
 
-tm.test=overriding this if it was set in application.properties.. really like the @Value-annotation. Annotations is the best!!!
+tm.test=overriding this if it was set in application.properties.. really like the @Value-annotation. Annotations is the best!!!LeoMan
 #default is on which makes the
 #localhost:8080/refresh command not autorized when surfing to it
