--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,8 @@
 some.property=global
 some.other.property=global
 
-management.security.enabled=true
+#We cant use the /refresh endpoint if this is set at true(default)
+management.security.enabled=false
 
 test=created this test variable and im using @Value to do it and inject this message into a variable in the code..I updated this now by using the @RefreshScope on my controller and surfed to localhost:8080/refresh and updated this while running the application and I didnt reboot it
 
